<resources>
    <!-- App Strings -->
    <string name="app_name" translatable="false">Stop Smoking</string>
    <string name="title_health">Health</string>
    <string name="title_savings">Savings</string>
    <string name="title_goals">Goals</string>
    <string name="title_advices">Advices</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="contribute_to_project">Contribute to this project</string>
    <string name="app_info">Version 0.9.6\n\nHuman-Computer Interaction project, by:\n\u2022 Giovanni Donisi\n\u2022 Alfonso D\'Albenzio\n\u2022 Domenico Palma</string>
    <string name="preferences">Preferences</string>
    <string name="theme">Theme</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="next">NEXT</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_summary">The number of cigarettes you smoke per day</string>
    <string name="first_launch_price">How much does a pack of 20 cigarettes cost?</string>
    <string name="first_launch_quantity1">How many cigarettes do you smoke per day?</string>
    <string name="first_launch_quantity2">How many cigarettes did you smoke per day?</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="price_summary">The price of a pack of 20 cigarettes</string>
    <string name="language">Language</string>
    <string name="choose_language">Choose Language</string>
    <string name="add_goal">Add a new goal</string>
    <string name="invalid_name">Name can\'t be empty!</string>
    <string name="invalid_price">Please set a valid price</string>
    <string name="already_quit_smoking">I have quit smoking</string>
    <string name="no_goals">No goals set</string>
    <string name="money_saved">Since you quit smoking you have saved approximately € %1$d. You\'re saving around € %2$d per month, more than € %3$d per year!</string>
    <string name="money_would_save">If you quit smoking, you would save around € %1$d per month, more than € %2$d per year!</string>
    <string name="cigarettes_saved">Since you quit smoking you have avoided %1$d cigarettes, equivalent to approximately %2$d days of life</string>
    <string name="cigarettes_would_save">If you quit smoking, you would avoid %1$d cigarettes per month, more than %2$d per year. This means recovering around %3$d days of life per year!</string>
    <string name="switch_quit_warning">If you proceed you will lose all your progress in the app. Are you sure you want to continue?</string>
    <string name="left_arrow">Left Arrow</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="money">€ %1$s</string>
    <string name="edit_goal">Edit Goal</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="already_saved">Already saved € %1$d, € %2$s remains.\nReached in %3$d days.</string>

    <!-- Health Fragment Cards -->
    <string name="completed">Completed!</string>
    <string name="title0">Pressure</string>
    <string name="secondary_text0">Blood pressure is reduced</string>
    <string name="title1">Heart rate</string>
    <string name="secondary_text1">Heart rate decreases</string>
    <string name="title2">Monoxide</string>
    <string name="secondary_text2">The amount of carbon monoxide in the blood decreases</string>
    <string name="title3">Oxygen</string>
    <string name="secondary_text3">The amount of oxygen in the blood increases</string>
    <string name="title4">Coronary</string>
    <string name="secondary_text4">The risk of coronary heart disease is reduced</string>
    <string name="title5">Sleep</string>
    <string name="secondary_text5">Sleep improves</string>
    <string name="title6">Muscles</string>
    <string name="secondary_text6">Muscles work better</string>
    <string name="title7">Taste</string>
    <string name="secondary_text7">The sense of taste returns</string>
    <string name="title8">Smell</string>
    <string name="secondary_text8">The sense of smell returns</string>
    <string name="title9">Breath</string>
    <string name="secondary_text9">Bad breath disappears</string>
    <string name="title10">Teeth</string>
    <string name="secondary_text10">Teeth lighten</string>
    <string name="title11">Skin</string>
    <string name="secondary_text11">The skin is less greasy and wrinkled</string>
    <string name="title12">Tiredness</string>
    <string name="secondary_text12">Wheezing and tiredness are reduced</string>
    <string name="title13">Diabetes</string>
    <string name="secondary_text13">The risk of diabetes is reduced</string>
    <string name="title14">Bronchi</string>
    <string name="secondary_text14">The bronchi are more open and less inflamed</string>
    <string name="title15">Cough</string>
    <string name="secondary_text15">Less phlegm is produced, reducing coughing</string>
    <string name="title16">bronchitis</string>
    <string name="secondary_text16">The risk of bronchitis is reduced</string>
    <string name="title17">Circulation</string>
    <string name="secondary_text17">Circulatory problems are reduced</string>
    <string name="title18">Sex</string>
    <string name="secondary_text18">Sexual performances improve</string>
    <string name="title19">Heart attack</string>
    <string name="secondary_text19">Risk of heart attack and stroke reduced by 50%</string>
    <string name="title20">Mucociliary clearance</string>
    <string name="secondary_text20">The cleaning mechanism that removes foreign bodies that penetrate with the inhaled air starts working again</string>
    <string name="title21">Thrombosis</string>
    <string name="secondary_text21">The risk of thrombosis is reduced</string>
    <string name="title22">embolism</string>
    <string name="secondary_text22">The risk of embolism is reduced</string>
    <string name="title23">Cancer</string>
    <string name="secondary_text23">Lung cancer risk is reduced</string>
    <string name="title24">Detoxification</string>
    <string name="secondary_text24">The risk of heart attacks or cancers is equal to that of a non-smoker</string>

    <!-- Arrays -->
    <string-array name="preferences_theme">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="preferences_theme_values" translatable="false">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string-array name="preferences_language" translatable="false">
        <item>Italiano</item>
        <item>English</item>
    </string-array>
    <string-array name="preferences_language_values" translatable="false">
        <item>it</item>
        <item>en</item>
    </string-array>

    <!-- Plurals -->
    <plurals name="goal_days">
        <item quantity="one">If you quit smoking, you would reach this goal in %1$d day</item>
        <item quantity="other">If you quit smoking, you would reach this goal in %1$d days</item>
    </plurals>
    <plurals name="would_reach_in">
        <item quantity="one">If you quit smoking, you would get this benefit in %1$d day</item>
        <item quantity="other">If you quit smoking, you would get this benefit in %1$d days</item>
    </plurals>
    <plurals name="reached_in">
        <item formatted="true" quantity="one">Reached in %d day</item>
        <item formatted="true" quantity="other">Reached in %d days</item>
    </plurals>

    <!-- Advices -->
    <string name="advice0">Find a healthy snack you enjoy (such as baby carrots or celery sticks) and always carry it with you</string>
    <string name="advice1">Keep your mouth busy with a chewing gum or a candy</string>
    <string name="advice2">Exercise, when you stop smoking it is good to increase physical activity</string>
    <string name="advice3">Eat lots of fruit. Fresh fruits and vegetables help to overcome the urge to smoke</string>
    <string name="advice4">Think positive. Stop associating quitting smoking with deprivation of something, but make an effort to understand that you can only get great benefits from this choice.</string>
    <string name="advice5">Take a sauna</string>
    <string name="advice6">Cut back on caffeine, it has a greater effect on nicotine addicts</string>
    <string name="advice7">Cleaning the house is one way to get rid of the smoker mentality</string>
    <string name="advice8">Take a nap</string>
    <string name="advice9">Buy a stress reliever game. It is important to find new ways to relax and calm down without nicotine</string>
    <string name="advice10">Meditation may seem like an exotic remedy for quitting smoking but it is a fantastic way to manage some psychological aspects of nicotine deficiency</string>
    <string name="advice11">Talk to a friend on the phone</string>
    <string name="advice12">For parents: lead by example. A parent who quits, or at least doesn\'t smoke, is the best way to get the child to do the same</string>
    <string name="advice13">Take a shower</string>
    <string name="advice14">Cook your favorite dish</string>
    <string name="advice15">Watch a movie, a TV series, or a documentary</string>
    <string name="advice16">Take up new hobbies</string>
    <string name="advice17">Keep your mind busy by reading a good book</string>
    <string name="advice18">Drink lots of water. When you stop smoking, it is good to drink plenty of water and move more</string>
    <string name="advice19">The piggy bank. A good incentive to quit smoking is to give yourself a final reward, in stages</string>
    <string name="advice20">Remove temptations at home: ashtrays, lighters, objects that evoke smoke</string>
    <string name="advice21">Don\'t be discouraged. Relapses are completely natural in the tiring journey that leads to quitting smoking, do not forget that it is an addiction</string>
    <string name="advice22">Breathe in a straw from your fingers</string>
    <string name="advice23">Plan your next trip</string>
    <string name="advice24">For parents: a reward if the child stops. If your child reacts positively and is able to quit, he deserves a reward</string>
    <string name="advice25">Take a walk and experience the sensation of deep breathing again</string>
    <string name="advice26">Brush your teeth to make the urge to smoke go away</string>
    <string name="advice27">Throw away anything that reminds you of cigarettes</string>
    <string name="advice28">Listen to your favorite music</string>
</resources>