<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstLaunchActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_stopped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:text="@string/already_quit_smoking" />

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/switch_stopped"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:id="@+id/tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_launch_quantity2" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_launch_price" />

        <EditText
            android:id="@+id/etPrice"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="4" />

    </GridLayout>

    <DatePicker
        android:id="@+id/date_pick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/grid_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="8dp"
        android:text="@string/next" />

</RelativeLayout>